OpenVi 7.0.15 -> OpenVi 7.1.16: Thu Mar 10 21:42:28 2022
        + Make `sstrip` target depend on the `strip` target, since many
          platforms do not support all the sstrip options, so still stripping
          as much as is possible is the most user-friendly thing to try.
        + Add support for Solaris; tested on Oracle Solaris 11.4.0 with GCC,
          Clang (V6+), and the Oracle Developer Studio V12.6 compiler.
        + Add support for illumos; tested on OpenIndiana Hipster 2022.03
        + Add support for NetBSD; tested on NetBSD/amd64 9.2-stable with
          the system provided GCC and Clang from binary packages; compiling
          `CC=clang LTO=1` requires the LLVM LLD linker `ld.lld` installed
        + Add support for IBM AIX 7+; tested on IBM AIX 7.2 and IBM AIX 7.3
          with GNU GCC (8, 9, 10, 11), IBM XL C/C++ V16.1+ (gxlc, xlclang),
          and IBM Open XL C/C++ V17.1+ using ncurses from IBM's AIX Toolbox;
          AIX builds default to 64-bit (on 64-bit systems) when using a
          supported compiler; the environment variable `MAIXBITS` can be set
          to `32` or `64` to force compilation of a 32-bit or 64-bit binary
        + Various portability improvements (portable BSD getopt, warn, etc.)
        + Reorganize source tree to better separate logical components
        + `WCOREDUMP` is not in POSIX.1-2008, so don't require it to build
        + Similarly, check if `TIOCSCTTY` is available and don't require it
        + Add `xinstall`, a BSD install utility based on OpenBSD `install(1)`
        + Switch `vfork` to `fork` as `vfork` is now gone from POSIX.1-2008
        + Clear pointer after ending screen for safety
        + `README.md`, documentation, and man page corrections and improvements
        + Apply `expandtab` to lines filtered with the `!` command, via `nvi2`
        + OpenBSD 7.1 enters beta; bumping OpenBSD version to 7.1
        + Modify text `%s/OpenBSD vi/OpenVi/` in `common/recover.c`