@@ -1,0 +1,83 @@
+/*      $OpenBSD: dirname.c,v 1.17 2020/10/20 19:30:14 naddy Exp $           */
+
+/*
+ * Copyright (c) 1997, 2004 Todd C. Miller <millert@openbsd.org>
+ * Copyright (c) 2022 Jeffrey H. Johnson <trnsz@pobox.com>
+ *
+ * Permission to use, copy, modify, and distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+ * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ */
+
+#include <errno.h>
+#include <libgen.h>
+#include <limits.h>
+#include <bsd_stdlib.h>
+#include <bsd_string.h>
+
+#undef open
+
+char *
+openbsd_dirname(char *path)
+{
+  static char dname[PATH_MAX];
+  size_t len;
+  const char *endp;
+
+  /* Empty or NULL string gets treated as "." */
+  if (path == NULL || *path == '\0')
+    {
+      dname[0] = '.';
+      dname[1] = '\0';
+      return dname;
+    }
+
+  /* Strip any trailing slashes */
+  endp = path + strlen(path) - 1;
+  while (endp > path && *endp == '/')
+    {
+      endp--;
+    }
+
+  /* Find the start of the dir */
+  while (endp > path && *endp != '/')
+    {
+      endp--;
+    }
+
+  /* Either the dir is "/" or there are no slashes */
+  if (endp == path)
+    {
+      dname[0] = *endp == '/' ? '/' : '.';
+      dname[1] = '\0';
+      return dname;
+    }
+  else
+    {
+      /* Move forward past the separating slashes */
+      do
+        {
+          endp--;
+        }
+      while ( endp > path && *endp == '/' );
+    }
+
+  len = endp - path + 1;
+  if (len >= sizeof ( dname ))
+    {
+      errno = ENAMETOOLONG;
+      return NULL;
+    }
+
+  memcpy(dname, path, len);
+  dname[len] = '\0';
+  return dname;
+}
