@@ -1,4 +1,6 @@
-OpenVi 7.0.15 -> OpenVi 7.1.16: Thu Mar 10 21:42:28 2022
+OpenVi 7.0.15 -> OpenVi 7.1.16: Sat Mar 12 12:21:39 2022
+        + Add OpenBSD basename functionality for use with xinstall
+        + Simplify compatibility headers
         + Make `sstrip` target depend on the `strip` target, since many
           platforms do not support all the sstrip options, so still stripping
           as much as is possible is the most user-friendly thing to try.
